# Mohammed_Protfolio

Desktop/CS MSA/spring_2026/1-CSBC/pharmacy/prescription-ai-service/: .env.example  .gitignore  PHASE_1_STATUS.md  README.md  TASK_AI_001_COMPLETION.md  docker-compose.yml  pyproject.toml  requirements.txt
Desktop/CS MSA/spring_2026/1-CSBC/pharmacy/prescription-ai-service/app/: __init__.py  main.py
Desktop/CS MSA/spring_2026/1-CSBC/pharmacy/prescription-ai-service/app/api/: deps.py
Desktop/CS MSA/spring_2026/1-CSBC/pharmacy/prescription-ai-service/app/api/v1/: __init__.py  api.py
Desktop/CS MSA/spring_2026/1-CSBC/pharmacy/prescription-ai-service/app/api/v1/endpoints/: __init__.py  health.py  prescriptions.py
Desktop/CS MSA/spring_2026/1-CSBC/pharmacy/prescription-ai-service/app/config/: database.py  settings.py
Desktop/CS MSA/spring_2026/1-CSBC/pharmacy/prescription-ai-service/app/core/: __init__.py  exceptions.py  security.py
Desktop/CS MSA/spring_2026/1-CSBC/pharmacy/prescription-ai-service/app/models/: __init__.py  analysis.py  database.py  prescription.py
Desktop/CS MSA/spring_2026/1-CSBC/pharmacy/prescription-ai-service/app/repositories/: __init__.py  cache_repo.py  prescription_repo.py
Desktop/CS MSA/spring_2026/1-CSBC/pharmacy/prescription-ai-service/app/services/: ai_pipeline.py  drug_matcher.py  llm_service.py  ocr_service.py  prescription_pipeline.py
Desktop/CS MSA/spring_2026/1-CSBC/pharmacy/prescription-ai-service/docker/: Dockerfile
Desktop/CS MSA/spring_2026/1-CSBC/pharmacy/prescription-ai-service/requirements/: base.txt  dev.txt
Desktop/CS MSA/spring_2026/1-CSBC/pharmacy/prescription-ai-service/scripts/: check_db.py
Desktop/CS MSA/spring_2026/1-CSBC/pharmacy/prescription-ai-service/tests/: __init__.py
Desktop/CS MSA/spring_2026/1-CSBC/pharmacy/prescription-ai-service/tests/unit/: test_models.py  test_security.py
Desktop/ROMEO/protfolio/: index.html
Project/Project/: code.ipynb
