[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prescription-ai-service"
version = "0.1.0"
description = "AI-powered prescription analysis microservice for pharmacy management system"
authors = [
    {name = "Pharmacy AI Team", email = "ai-team@pharmacy.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "motor>=3.3.2",  # Async MongoDB driver
    "redis>=5.0.1",
    "aiofiles>=23.2.1",
    "python-multipart>=0.0.6",  # File upload support
    "paddleocr>=2.7.3",
    "pillow>=10.1.0",
    "opencv-python>=4.8.1",
    "numpy>=1.24.4",
    "python-jose[cryptography]>=3.3.0",  # JWT handling
    "passlib[bcrypt]>=1.7.4",
    "httpx>=0.25.2",  # HTTP client for Spring Boot integration
    "celery>=5.3.4",  # Background tasks
    "prometheus-client>=0.19.0",  # Metrics
    "structlog>=23.2.0",  # Structured logging
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "httpx>=0.25.2",  # Testing client
    "faker>=20.1.0",
    "pre-commit>=3.5.0",
    "black>=23.11.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.7.1",
    "bandit>=1.7.5",  # Security testing
]

llm = [
    "transformers>=4.36.0",
    "torch>=2.1.1",
    "accelerate>=0.25.0",
    "bitsandbytes>=0.41.3",
    "openai>=1.3.0",  # Fallback to OpenAI if needed
]

[project.urls]
Homepage = "https://github.com/pharmacy/prescription-ai-service"
Repository = "https://github.com/pharmacy/prescription-ai-service"
Documentation = "https://github.com/pharmacy/prescription-ai-service/docs"

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-fail-under=80",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/venv/*",
    "*/__pycache__/*",
    "*/migrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.bandit]
exclude_dirs = ["tests", "venv"]
tests = ["B201", "B301"]
skips = ["B101", "B601"]